fixed spacing in social media links in footer

--- a/style.css
+++ b/style.css
@@ -114,4 +114,5 @@ h4 {
 
 .linksIcon {
     color: #5DBCD2;
+    margin: 15px;
 }
